@@ -1,39 +1,34 @@
 package com.example.senioron.domain.medication.service;
 
-
-import java.util.Locale;
-
 import com.example.senioron.domain.medication.dto.request.MedicationCreateRequest;
 import com.example.senioron.domain.medication.dto.request.MedicationUpdateRequest;
 import com.example.senioron.domain.medication.dto.response.MedicationCreateResponse;
 import com.example.senioron.domain.medication.dto.response.MedicationReadResponse;
 import com.example.senioron.domain.medication.entity.Medication;
-import com.example.senioron.domain.medication.entity.MedicationLog;
 import com.example.senioron.domain.medication.repository.MedicationLogRepository;
 import com.example.senioron.domain.medication.repository.MedicationRepository;
-import com.example.senioron.domain.user.entity.ManagerType;
 import com.example.senioron.domain.user.entity.Role;
 import com.example.senioron.domain.user.entity.User;
 import com.example.senioron.domain.user.repository.UserRepository;
 import com.example.senioron.global.apiPayload.code.ErrorCode;
 import com.example.senioron.global.apiPayload.exception.BusinessException;
+import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.time.ZoneId;
+import java.time.format.DateTimeParseException;
+import java.util.Arrays;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.UUID;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-
-import java.time.LocalDate;
-import java.time.LocalTime;
-import java.time.format.DateTimeParseException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.LinkedHashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
-import java.util.stream.Collectors;
-import java.time.ZoneId;
 
 @Slf4j
 @Service
@@ -41,13 +36,21 @@ import java.time.ZoneId;
 @Transactional(readOnly = true)
 public class MedicationService {
 
-    private static final int LOG_SCHEDULE_DAYS = 30;
+    private static final ZoneId KOREA_ZONE_ID =
+            ZoneId.of("Asia/Seoul");
 
     private static final List<String> DAY_ORDER = List.of(
-            "SUN", "MON", "TUE", "WED", "THU", "FRI", "SAT"
+            "SUN",
+            "MON",
+            "TUE",
+            "WED",
+            "THU",
+            "FRI",
+            "SAT"
     );
 
-    private static final Map<String, String> DAY_DISPLAY_NAMES = Map.ofEntries(
+    private static final Map<String, String>
+            DAY_DISPLAY_NAMES = Map.ofEntries(
             Map.entry("SUN", "일"),
             Map.entry("MON", "월"),
             Map.entry("TUE", "화"),
@@ -58,8 +61,8 @@ public class MedicationService {
     );
 
     private final MedicationRepository medicationRepository;
-    private final UserRepository userRepository;
     private final MedicationLogRepository medicationLogRepository;
+    private final UserRepository userRepository;
 
     @Transactional
     public MedicationCreateResponse createMedication(
@@ -72,78 +75,58 @@ public class MedicationService {
                 parentUserId
         );
 
-        String medicineDays = String.join(
-                ",",
+        String medicationGroupId =
+                UUID.randomUUID().toString();
+
+        LocalDateTime effectiveFrom =
+                LocalDateTime.now(KOREA_ZONE_ID);
+
+        String medicineDays = normalizeAndJoinDays(
                 request.getMedicineDays()
         );
 
-        String medicationGroupId =
-                java.util.UUID.randomUUID().toString();
+        List<Medication> savedMedications =
+                request.getMedicineTimes()
+                        .stream()
+                        .map(this::parseMedicineTime)
+                        .map(medicineTime ->
+                                medicationRepository.save(
+                                        Medication.builder()
+                                                .user(parentUser)
+                                                .medicineName(
+                                                        request.getMedicineName()
+                                                )
+                                                .ingredientName(
+                                                        request.getIngredientName()
+                                                )
+                                                .medicineTime(
+                                                        medicineTime
+                                                )
+                                                .medicineDays(
+                                                        medicineDays
+                                                )
+                                                .medicationGroupId(
+                                                        medicationGroupId
+                                                )
+                                                .effectiveFrom(
+                                                        effectiveFrom
+                                                )
+                                                .effectiveTo(null)
+                                                .build()
+                                )
+                        )
+                        .toList();
 
-        List<Long> medicationIds = new ArrayList<>();
-        List<String> medicineTimes = new ArrayList<>();
-        List<MedicationLog> logsToSave = new ArrayList<>();
+        List<Long> medicationIds =
+                savedMedications.stream()
+                        .map(Medication::getMedication_id)
+                        .toList();
 
-        LocalDate startDate = LocalDate.now(
-                ZoneId.of("Asia/Seoul")
-        );
-
-        for (String timeStr : request.getMedicineTimes()) {
-            LocalTime medicineTime = parseMedicineTime(timeStr);
-
-            Medication medication = Medication.builder()
-                    .user(parentUser)
-                    .medicineName(request.getMedicineName())
-                    .ingredientName(request.getIngredientName())
-                    .medicineTime(medicineTime)
-                    .medicineDays(medicineDays)
-                    .medicationGroupId(medicationGroupId)
-                    .build();
-
-            Medication savedMedication =
-                    medicationRepository.save(medication);
-
-            medicationIds.add(savedMedication.getMedication_id());
-            medicineTimes.add(
-                    savedMedication.getMedicineTime().toString()
-            );
-
-            for (int i = 0; i < LOG_SCHEDULE_DAYS; i++) {
-                LocalDate currentDate = startDate.plusDays(i);
-
-                String normalizedCurrentDay = normalizeDay(
-                        currentDate.getDayOfWeek().name()
-                );
-
-                boolean isDayIncluded =
-                        request.getMedicineDays().stream()
-                                .map(String::trim)
-                                .map(value -> value.toUpperCase(Locale.ROOT))
-                                .map(this::normalizeDay)
-                                .anyMatch(day ->
-                                        Objects.equals(
-                                                day,
-                                                normalizedCurrentDay
-                                        )
-                                );
-
-                if (isDayIncluded) {
-                    logsToSave.add(
-                            MedicationLog.builder()
-                                    .user(parentUser)
-                                    .medication(savedMedication)
-                                    .plannedDate(currentDate)
-                                    .plannedTime(medicineTime)
-                                    .isTaken(false)
-                                    .build()
-                    );
-                }
-            }
-        }
-
-        if (!logsToSave.isEmpty()) {
-            medicationLogRepository.saveAll(logsToSave);
-        }
+        List<String> medicineTimes =
+                savedMedications.stream()
+                        .map(Medication::getMedicineTime)
+                        .map(LocalTime::toString)
+                        .toList();
 
         log.info(
                 "약 등록 완료. requesterUserId: {}, parentUserId: {}, groupId: {}",
@@ -162,61 +145,205 @@ public class MedicationService {
         );
     }
 
-    private String convertDayOfWeekToKorean(
-            java.time.DayOfWeek dayOfWeek
+    public List<MedicationReadResponse> getMedications(
+            Long requesterUserId,
+            Long parentUserId
     ) {
-        return switch (dayOfWeek) {
-            case MONDAY -> "월";
-            case TUESDAY -> "화";
-            case WEDNESDAY -> "수";
-            case THURSDAY -> "목";
-            case FRIDAY -> "금";
-            case SATURDAY -> "토";
-            case SUNDAY -> "일";
-        };
-    }
-
-    public List<MedicationReadResponse> getMedications(Long userId) {
-        User user = getUserOrThrow(userId);
+        User parentUser = getReadableParentOrThrow(
+                requesterUserId,
+                parentUserId
+        );
 
         return medicationRepository
-                .findAllByUserOrderByMedicineTimeAsc(user)
+                .findAllByUserAndEffectiveToIsNullOrderByMedicineTimeAsc(
+                        parentUser
+                )
                 .stream()
-                .map(medication -> new MedicationReadResponse(
-                        medication.getMedication_id(),
-                        medication.getMedicineName(),
-                        medication.getIngredientName(),
-                        formatMedicineTime(
-                                medication.getMedicineTime()
-                        ),
-                        formatMedicineDays(
-                                medication.getMedicineDays()
+                .map(medication ->
+                        new MedicationReadResponse(
+                                medication.getMedication_id(),
+                                medication.getMedicationGroupId(),
+                                medication.getMedicineName(),
+                                medication.getIngredientName(),
+                                formatMedicineTime(
+                                        medication.getMedicineTime()
+                                ),
+                                formatMedicineDays(
+                                        medication.getMedicineDays()
+                                )
                         )
-                ))
-                .collect(Collectors.toList());
+                )
+                .toList();
     }
 
-    private User getUserOrThrow(Long userId) {
-        return userRepository.findById(userId)
-                .orElseThrow(() ->
-                        new BusinessException(
-                                ErrorCode.USER_NOT_FOUND
-                        )
+    @Transactional
+    public void updateMedication(
+            Long requesterUserId,
+            Long parentUserId,
+            MedicationUpdateRequest request
+    ) {
+        User parentUser = getWritableParentOrThrow(
+                requesterUserId,
+                parentUserId
+        );
+
+        List<Medication> existingMedications =
+                medicationRepository
+                        .findByUserAndMedicationGroupIdAndEffectiveToIsNull(
+                                parentUser,
+                                request.getMedicationGroupId()
+                        );
+
+        if (existingMedications.isEmpty()) {
+            throw new BusinessException(
+                    ErrorCode.MEDICATION_NOT_FOUND
+            );
+        }
+
+        LocalDateTime changedAt =
+                LocalDateTime.now(KOREA_ZONE_ID);
+
+        existingMedications.forEach(
+                medication -> medication.endMedication(changedAt)
+        );
+
+        medicationLogRepository.deleteFutureUntakenLogs(
+                existingMedications,
+                changedAt.toLocalDate(),
+                changedAt.toLocalTime()
+        );
+
+        String medicineDays = normalizeAndJoinDays(
+                request.getMedicineDays()
+        );
+
+        for (String timeString : request.getMedicineTimes()) {
+            LocalTime medicineTime =
+                    parseMedicineTime(timeString);
+
+            Medication newMedication =
+                    Medication.builder()
+                            .user(parentUser)
+                            .medicineName(
+                                    request.getMedicineName()
+                            )
+                            .ingredientName(
+                                    request.getIngredientName()
+                            )
+                            .medicineTime(medicineTime)
+                            .medicineDays(medicineDays)
+                            .medicationGroupId(
+                                    request.getMedicationGroupId()
+                            )
+                            .effectiveFrom(changedAt)
+                            .effectiveTo(null)
+                            .build();
+
+            medicationRepository.save(newMedication);
+        }
+
+        log.info(
+                "약 수정 완료. requesterUserId: {}, parentUserId: {}, groupId: {}",
+                requesterUserId,
+                parentUserId,
+                request.getMedicationGroupId()
+        );
+    }
+
+    @Transactional
+    public void deleteMedicationGroup(
+            Long requesterUserId,
+            Long parentUserId,
+            String medicationGroupId
+    ) {
+        User parentUser = getWritableParentOrThrow(
+                requesterUserId,
+                parentUserId
+        );
+
+        List<Medication> medications =
+                medicationRepository
+                        .findByUserAndMedicationGroupIdAndEffectiveToIsNull(
+                                parentUser,
+                                medicationGroupId
+                        );
+
+        if (medications.isEmpty()) {
+            throw new BusinessException(
+                    ErrorCode.MEDICATION_NOT_FOUND
+            );
+        }
+
+        LocalDateTime deletedAt =
+                LocalDateTime.now(KOREA_ZONE_ID);
+
+        medications.forEach(
+                medication -> medication.endMedication(deletedAt)
+        );
+
+        medicationLogRepository.deleteFutureUntakenLogs(
+                medications,
+                deletedAt.toLocalDate(),
+                deletedAt.toLocalTime()
+        );
+        log.info(
+                "약 삭제 처리 완료. requesterUserId: {}, parentUserId: {}, groupId: {}",
+                requesterUserId,
+                parentUserId,
+                medicationGroupId
+        );
+    }
+
+    private User getReadableParentOrThrow(
+            Long requesterUserId,
+            Long parentUserId
+    ) {
+        User requester = getUserOrThrow(
+                requesterUserId
+        );
+
+        if (requester.getRole() == Role.PARENT) {
+            if (!Objects.equals(
+                    requester.getUsersId(),
+                    parentUserId
+            )) {
+                throw new BusinessException(
+                        ErrorCode.FORBIDDEN
                 );
+            }
+
+            return requester;
+        }
+
+        validateChild(requester);
+
+        return getSameFamilyParentOrThrow(
+                requester,
+                parentUserId
+        );
     }
 
     private User getWritableParentOrThrow(
             Long requesterUserId,
             Long parentUserId
     ) {
-        User requester = getUserOrThrow(requesterUserId);
+        User requester = getUserOrThrow(
+                requesterUserId
+        );
 
+        validateChild(requester);
+
+        return getSameFamilyParentOrThrow(
+                requester,
+                parentUserId
+        );
+    }
+
+    private void validateChild(User requester) {
         if (requester.getRole() != Role.CHILD) {
-            throw new BusinessException(ErrorCode.FORBIDDEN);
-        }
-
-        if (requester.getManagerType() != ManagerType.PRIMARY) {
-            throw new BusinessException(ErrorCode.FORBIDDEN);
+            throw new BusinessException(
+                    ErrorCode.FORBIDDEN
+            );
         }
 
         if (requester.getFamily() == null) {
@@ -224,8 +351,15 @@ public class MedicationService {
                     ErrorCode.FAMILY_NOT_FOUND
             );
         }
+    }
 
-        User parentUser = getUserOrThrow(parentUserId);
+    private User getSameFamilyParentOrThrow(
+            User requester,
+            Long parentUserId
+    ) {
+        User parentUser = getUserOrThrow(
+                parentUserId
+        );
 
         if (parentUser.getRole() != Role.PARENT) {
             throw new BusinessException(
@@ -249,19 +383,81 @@ public class MedicationService {
         return parentUser;
     }
 
-    private LocalTime parseMedicineTime(String time) {
+    private User getUserOrThrow(Long userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() ->
+                        new BusinessException(
+                                ErrorCode.USER_NOT_FOUND
+                        )
+                );
+    }
+
+    private String normalizeAndJoinDays(
+            List<String> medicineDays
+    ) {
+        Set<String> normalizedDays =
+                medicineDays.stream()
+                        .map(String::trim)
+                        .map(value ->
+                                value.toUpperCase(
+                                        Locale.ROOT
+                                )
+                        )
+                        .map(this::normalizeDay)
+                        .filter(Objects::nonNull)
+                        .collect(
+                                Collectors.toCollection(
+                                        LinkedHashSet::new
+                                )
+                        );
+
+        if (normalizedDays.size()
+                != new LinkedHashSet<>(
+                medicineDays
+        ).size()) {
+            boolean containsInvalidDay =
+                    medicineDays.stream()
+                            .map(String::trim)
+                            .map(value ->
+                                    value.toUpperCase(
+                                            Locale.ROOT
+                                    )
+                            )
+                            .map(this::normalizeDay)
+                            .anyMatch(Objects::isNull);
+
+            if (containsInvalidDay) {
+                throw new BusinessException(
+                        ErrorCode.BAD_REQUEST
+                );
+            }
+        }
+
+        return DAY_ORDER.stream()
+                .filter(normalizedDays::contains)
+                .collect(Collectors.joining(","));
+    }
+
+    private LocalTime parseMedicineTime(
+            String time
+    ) {
         try {
             return LocalTime.parse(time);
         } catch (DateTimeParseException exception) {
-            throw new BusinessException(ErrorCode.BAD_REQUEST);
+            throw new BusinessException(
+                    ErrorCode.BAD_REQUEST
+            );
         }
     }
 
-    private String formatMedicineTime(LocalTime medicineTime) {
+    private String formatMedicineTime(
+            LocalTime medicineTime
+    ) {
         int hour = medicineTime.getHour();
         int minute = medicineTime.getMinute();
 
-        String period = hour < 12 ? "오전" : "오후";
+        String period =
+                hour < 12 ? "오전" : "오후";
 
         int displayHour = hour % 12;
 
@@ -270,7 +466,10 @@ public class MedicationService {
         }
 
         if (minute == 0) {
-            return period + " " + displayHour + "시";
+            return period
+                    + " "
+                    + displayHour
+                    + "시";
         }
 
         return String.format(
@@ -281,29 +480,26 @@ public class MedicationService {
         );
     }
 
-    private String formatMedicineDays(String medicineDays) {
-        if (medicineDays == null || medicineDays.isBlank()) {
+    private String formatMedicineDays(
+            String medicineDays
+    ) {
+        if (medicineDays == null
+                || medicineDays.isBlank()) {
             return "";
         }
 
         Set<String> normalizedDays =
-                Arrays.stream(medicineDays.split(","))
+                Arrays.stream(
+                                medicineDays.split(",")
+                        )
                         .map(String::trim)
-                        .map(value -> value.toUpperCase(Locale.ROOT))
-                        .map(day -> {
-                            String normalizedDay =
-                                    normalizeDay(day);
-
-                            if (normalizedDay == null) {
-                                log.warn(
-                                        "Unrecognized medicine day token: {}",
-                                        day
-                                );
-                            }
-
-                            return normalizedDay;
-                        })
-                        .filter(day -> day != null)
+                        .map(value ->
+                                value.toUpperCase(
+                                        Locale.ROOT
+                                )
+                        )
+                        .map(this::normalizeDay)
+                        .filter(Objects::nonNull)
                         .collect(
                                 Collectors.toCollection(
                                         LinkedHashSet::new
@@ -321,6 +517,10 @@ public class MedicationService {
     }
 
     private String normalizeDay(String day) {
+        if (day == null) {
+            return null;
+        }
+
         return switch (day) {
             case "SUN", "SUNDAY", "일" -> "SUN";
             case "MON", "MONDAY", "월" -> "MON";
@@ -331,113 +531,5 @@ public class MedicationService {
             case "SAT", "SATURDAY", "토" -> "SAT";
             default -> null;
         };
-    }
-
-    @Transactional
-    public void deleteMedicationGroup(
-            Long userId,
-            String medicationGroupId
-    ) {
-        User user = getUserOrThrow(userId);
-
-        List<Medication> medications =
-                medicationRepository
-                        .findByUserAndMedicationGroupId(
-                                user,
-                                medicationGroupId
-                        );
-
-        if (!medications.isEmpty()) {
-            medicationLogRepository.deleteByMedicationIn(
-                    medications
-            );
-
-            medicationRepository
-                    .deleteByUserAndMedicationGroupId(
-                            user,
-                            medicationGroupId
-                    );
-        }
-
-        log.info(
-                "성공적으로 약 그룹과 복약 로그를 삭제했습니다. UserId: {}, GroupId: {}",
-                userId,
-                medicationGroupId
-        );
-    }
-
-    @Transactional
-    public void updateMedication(
-            Long userId,
-            MedicationUpdateRequest request
-    ) {
-        User user = getUserOrThrow(userId);
-
-        boolean exists =
-                medicationRepository
-                        .existsByUserAndMedicationGroupId(
-                                user,
-                                request.getMedicationGroupId()
-                        );
-
-        if (!exists) {
-            throw new BusinessException(
-                    ErrorCode.MEDICATION_NOT_FOUND
-            );
-        }
-
-        List<Medication> medications =
-                medicationRepository
-                        .findByUserAndMedicationGroupId(
-                                user,
-                                request.getMedicationGroupId()
-                        );
-
-        if (!medications.isEmpty()) {
-            medicationLogRepository.deleteByMedicationIn(
-                    medications
-            );
-        }
-
-        medicationRepository.deleteByUserAndMedicationGroupId(
-                user,
-                request.getMedicationGroupId()
-        );
-
-        String medicineDays = String.join(
-                ",",
-                request.getMedicineDays()
-        );
-
-        for (String timeStr : request.getMedicineTimes()) {
-            LocalTime medicineTime;
-
-            try {
-                medicineTime = LocalTime.parse(timeStr);
-            } catch (DateTimeParseException exception) {
-                throw new BusinessException(
-                        ErrorCode.BAD_REQUEST
-                );
-            }
-
-            Medication medication = Medication.builder()
-                    .user(user)
-                    .medicineName(request.getMedicineName())
-                    .ingredientName(request.getIngredientName())
-                    .medicineTime(medicineTime)
-                    .medicineDays(medicineDays)
-                    .medicationGroupId(
-                            request.getMedicationGroupId()
-                    )
-                    .build();
-
-            medicationRepository.save(medication);
-        }
-
-        log.info(
-                "성공적으로 약 그룹을 수정했습니다. UserId: {}, GroupId: {}",
-                userId,
-                request.getMedicationGroupId()
-        );
     }
 }
